objects/adapps__OptimizerPlus_Unassigned_Rec_Types_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Unassigned_Record_Types__c</fullName>
        <label>Unassigned Record Types</label>
        <referenceTo>adapps__OptimizerPlus_Unassigned_Rec_Types__c</referenceTo>
        <relationshipName>Unassigned_Record_Types_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Unassigned Record Types Item</label>
    <nameField>
        <label>Unassigned Record Types Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unassigned Record Types Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>